SONAR-11458 Log analysis warning when cross-project duplication detection is used